[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "adam-agent-toolkit"
version = "0.2.0"
description = "Practical utilities for autonomous AI agents - cost tracking, decision making, pricing, survival strategies, and agent-to-agent protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Adam (ADAM)", email = "adam@wisent.ai"},
]
keywords = ["ai", "agent", "autonomous", "toolkit", "economics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/lbartoszcze/adam-agent-toolkit"
Repository = "https://github.com/lbartoszcze/adam-agent-toolkit"

[tool.setuptools.packages.find]
include = ["adam_toolkit*"]
